<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.lumoslight.flashlight.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.lumoslight.flashlight.ui.fragment.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

    <dialog
        android:id="@+id/exitDialogFragment"
        android:name="com.lumoslight.flashlight.ui.dialog.ExitDialogFragment"
        android:label="@string/exit" />
</navigation>