<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_exit_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/backgroundColor"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gl_exit_dialog">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_dialog"
                android:padding="10dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.2" />

                <TextView
                    android:id="@+id/tv_dialog_title"
                    style="@style/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gl_top" />

                <View
                    android:id="@+id/v_border"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

                <TextView
                    android:id="@+id/tv_dialog_desc"
                    style="@style/app_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/exit_desc"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/v_border" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_no"
                    style="@style/dialog_no"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/ic_cancel"
                    android:text="@string/action_no"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_yes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dialog_desc"
                    app:layout_constraintWidth_percent="0.42" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_yes"
                    style="@style/dialog_ok"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/action_yes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_no"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dialog_desc"
                    app:layout_constraintWidth_percent="0.42" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:elevation="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/menu_app_icon"
            app:layout_constraintBottom_toTopOf="@+id/cv_card"
            app:layout_constraintEnd_toEndOf="@+id/cv_card"
            app:layout_constraintStart_toStartOf="@+id/cv_card"
            app:layout_constraintTop_toTopOf="@+id/cv_card" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>